# recsys-2023

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  ci-requirements.txt  docker-compose.yaml  gunicorn.config.py  hw2.md  main.py  mypy.ini  prometheus.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cicd.yml
notebooks/: MRR.ipynb  UsersKFoldLeavePOut.ipynb  pFound.ipynb
notebooks/hw3/: AE.ipynb  DSSM.ipynb
notebooks/hw4/: ALS.ipynb  ALS_artificial_users.ipynb  Artificial_users_preparation.ipynb  Cold_users.ipynb  Data_preparation.ipynb  LaunchOrder.md  LightFM.ipynb  LightFM_artificial_users.ipynb
service/: models.py  prometheus.py  settings.py
service/api/: app.py  exception_handlers.py  exceptions.py  middlewares.py  views.py
service/data/dataset/: cold_recos.csv
service/predictors/: __init__.py  als.py  base.py  constructor.py  explainer.py  predictors_config.yaml  random.py  utils.py
tests/: conftest.py
tests/api/: test_views.py
tests/mock_data/dataset/: prepared_featured_items_full.csv  prepared_featured_users_full.csv  prepared_interactions_full.csv
tests/mock_data/explanation_data/: items_rating.csv  users.csv
tests/mock_data/predictors/: als_with_features.joblib
