[tool.poetry]
name = "recsys-2023"
version = "0.1.0"
description = ""
authors = ["PetrovitchSharp <korchagin_official@yahoo.com>"]
readme = "README.md"
packages = [{include = "recsys_2023"}]

[tool.poetry.dependencies]
python = "3.9.16"
pre-commit = "^3.2.1"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
uvloop = "^0.17.0"
fastapi = "^0.95.0"
starlette = "^0.26.1"
pydantic = "^1.10.7"
orjson = "^3.8.9"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
plotly = "^5.14.0"
rectools = "^0.3.0"
pylint = "^2.17.2"
pytest = "^7.2.2"
mypy = "^1.1.1"
prometheus-fastapi-instrumentator = "^6.0.0"
starlette-prometheus = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
